# spkrepo

./: .coveragerc  .dockerignore  .flake8  .gitignore  .landscape.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  Vagrantfile  celery_app.py  dev-requirements.txt  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  setup.py  wsgi.py
.github/: FUNDING.yml
.github/workflows/: build.yml  cache-cleanup.yml  dependabot-uv-lock.yml  publish.yml  purge-cache.yml  pythonapp.yml  test.yml
data/: README.md
docs/: Makefile  admin.rst  api.rst  api_examples.rst  cli.rst  conf.py  deployment.rst  exceptions.rst  index.rst  make.bat  migrations.rst  models.rst  operations.rst  quickstart.rst  requirements.txt  storage.rst  tasks.rst  utils.rst
docs/_static/: custom.css
docs/_templates/: globaltoc.html  layout.html  sidebar-primary.html
migrations/: alembic.ini  env.py  script.py.mako
migrations/versions/: 02a2b583dfae_add_indexes_to_all_foreign_key_columns.py  05cba02585a2_replace_extract_size_with_size_on_build.py  1fa3599ed198_add_download_source_enum_make_arch_id_.py  23bbd5c74cd0_replace_download_with_download_stat.py  26b4c36c11e_create_database.py  30bc0c0455f8_split_build_firmware_and_add_build_.py  325d7d86f788_add_target_firmware_tracking_to_.py  3f5664905242_add_package_download_counts_materialized_view.py  3fdb8480a9f5_add_storage_and_signed_columns_to_build.py  76d559b4e873_add_fs_uniquifier.py  a41b2b645a3c_.py  c63ff65c708a_move_changelog_and_description_to_build.py  d429595e8362_update_build_path_length.py  d785f1fb2307_.py  d785f1fb2307_dsm6_fields.py  dc7687894ba7_.py  dc7687894ba7_increase_field_sizes.py  f95855ce9471_add_firmware_type_and_increase_version_.py
salt/: minion
salt/roots/pillar/: top.sls  vagrant.sls
salt/roots/salt/: postgresql.sls  redis.sls  top.sls
salt/roots/salt/app/: env.sls  init.sls  source.sls  spkrepo.cfg.tmpl
salt/roots/salt/gnupg/: init.sls
salt/roots/salt/nginx/: init.sls  spkrepo.conf.tmpl
salt/roots/salt/templates/: init.sls
salt/roots/salt/templates/templates/frontend/: index.html
salt/roots/salt/uwsgi/: init.sls  uwsgi.ini
spkrepo/: __init__.py  app.py  cli.py  config.py  exceptions.py  ext.py  filters.py  models.py  storage.py  utils.py
spkrepo/static/css/: spkrepo.css
spkrepo/static/js/: bootstrap.min.js  chart.umd.js.map  jquery.dotdotdot.min.js  spkrepo.js
spkrepo/templates/: _wtfhelpers.html  layout.html
spkrepo/templates/admin/: index.html  master.html  package_detail.html  task_status.html
spkrepo/templates/admin/model/: download_stats_list.html  package_list.html
spkrepo/templates/frontend/: index.html  package.html  packages.html  profile.html
spkrepo/templates/security/: change_password.html  forgot_password.html  login_user.html  register_user.html  reset_password.html  send_confirmation.html
spkrepo/tests/: __init__.py  common.py  test_admin.py  test_admin_actions.py  test_admin_core.py  test_admin_views.py  test_api.py  test_filters.py  test_frontend.py  test_nas.py  test_object_storage_tasks.py  test_parsing.py  test_sidecar.py  test_tasks.py  test_utils.py
spkrepo/views/: __init__.py  admin.py  api.py  frontend.py  nas.py  tasks.py
