[project]
name = "spkrepo"
version = "0.3.0"
description = "Synology Package Repository"
license = "MIT"
authors = [ { name="Antoine Bertin", email="diaoulael@gmail.com" } ]
readme = "README.md"
repository = "https://github.com/SynoCommunity/spkrepo"
keywords = ["synology", "package", "repository"]
homepage = "https://synocommunity.com"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: System :: Archiving :: Packaging",
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "alembic~=1.17.2",
    "bcrypt~=5.0.0",                # provides strong password-hashing for libpass[bcrypt] option
    "click~=8.3.1",
    "configparser~=7.2.0",
    "flask-admin~=2.0.2",
    "flask-babel~=4.0.0",
    "flask-caching~=2.3.1",
    "flask-debugtoolbar~=0.16.0",
    "flask-mail~=0.10.0",
    "flask-migrate~=4.1.0",
    "flask-principal~=0.4.0",
    "flask-restful~=0.3.10",
    "flask-security~=5.6.2",
    "flask-sqlalchemy~=3.1.1",
    "flask-wtf~=1.2.2",
    "flask~=3.1.2",
    "pillow~=12.0.0",               # provides image handling for flask-admin[images] extra
    "python-gnupg~=0.5.5",          # Modern maintained fork of 'gnupg'; fixes Py3.11+ warnings
    "requests~=2.32.5",
    "sqlalchemy~=2.0.45",
    "wtforms~=3.2.1",
]

[dependency-groups]
dev = [
    "factory-boy~=3.3.3",
    "faker~=33.3.1",
    "flask-testing~=0.8.1",
    "lxml~=5.4.0",
    "mock~=5.2.0",
    "pre-commit~=4.3.0",
    "psycopg2~=2.9.11",
    "pytest~=8.4.2",
    "setuptools~=78.0",
    "sphinx-rtd-theme~=3.0.2",
    "sphinx~=8.1.3",
]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = "spkrepo"

[build-system]
requires = ["poetry>=2.2.1"]
build-backend = "poetry.core.masonry.api"
