[project]
name = "spkrepo"
version = "0.3.1"
description = "Synology Package Repository"
authors = [{ name = "Antoine Bertin", email = "diaoulael@gmail.com" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = "MIT"
keywords = [
    "synology",
    "package",
    "repository",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: System :: Archiving :: Packaging",
]
dependencies = [
    "alembic>=1.17.2",
    "bcrypt>=5.0.0",
    "click>=8.3.1",
    "configparser>=7.2.0",
    "flask>=3.1.2",
    "flask-admin>=2.0.2",
    "flask-babel>=4.0.0",
    "flask-caching>=2.3.1",
    "flask-debugtoolbar>=0.16.0",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-principal>=0.4.0",
    "flask-restful>=0.3.10",
    "flask-security>=5.7.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "pillow>=12.0.0",
    "python-gnupg>=0.5.5",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "wtforms>=3.2.1",
]
homepage = "https://synocommunity.com"
repository = "https://github.com/SynoCommunity/spkrepo"

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=39.0.0",
    "flask-testing>=0.8.1",
    "lxml>=6.0.2",
    "mock>=5.2.0",
    "pre-commit>=4.5.1",
    "psycopg2>=2.9.11",
    "pytest>=9.0.2",
    "setuptools>=80.9.0",
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=0.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = "spkrepo"

[project.scripts]
flask = "flask.cli:main"
